...
            android:orientation="vertical"
            tools:ignore="MissingConstraints">



            <TextView
                android:id="@+id/textView_TBR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="ULC TBR"
                android:textSize="18sp"
                android:textColor="@color/black"
...

                    android:text="MENU ">

                </TextView>

                <Spinner
                    android:id="@+id/spinner_homeMenu"
                    android:layout_width="136dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp" />

            </LinearLayout>

...
                        android:id="@+id/textView_sessionType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="My Sessions" />

                    <ListView
                        android:id="@+id/listView_sessions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:scrollbars="vertical" />


...
