...
                    android:text="My Classes"
                    android:layout_marginTop="50dp">

                </TextView>

                <ListView
                    android:id="@+id/listView_myClasses"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
...
